<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent" android:background="@drawable/widget_background" android:gravity="center" android:orientation="vertical" android:padding="12dp">
    <LinearLayout android:layout_width="match_parent" android:layout_height="32dp" android:gravity="center" android:orientation="horizontal">
        <ImageView android:layout_width="30dp" android:layout_height="30dp" android:contentDescription="@string/widget_music_image" android:src="@drawable/widget_music_art" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="8dp" android:text="@string/app_name" android:textColor="#FFFFFFFF" android:textSize="16sp" android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1" android:gravity="center" android:orientation="horizontal">
        <Button android:id="@+id/shortcut_library" android:layout_width="0dp" android:layout_height="48dp" android:layout_margin="4dp" android:layout_weight="1" android:text="@string/widget_library" android:textSize="11sp" />
        <Button android:id="@+id/shortcut_favorites" android:layout_width="0dp" android:layout_height="48dp" android:layout_margin="4dp" android:layout_weight="1" android:text="@string/widget_favorites" android:textSize="11sp" />
        <Button android:id="@+id/shortcut_playlists" android:layout_width="0dp" android:layout_height="48dp" android:layout_margin="4dp" android:layout_weight="1" android:text="@string/widget_playlists" android:textSize="11sp" />
    </LinearLayout>
</LinearLayout>
